# docs

./: .#incl  .backportrc.json  .dockerignore  .drone.yml  .eslintrc  .evergreen.yaml  .evergreen.yml  .git-credentials  .github  .gitignore  .gitmodules  .mci.yml  .prettierrc  .vale.ini  .yamllint  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING.rst  CONTRUBUTING.md  Dockerfile  Makefile  NoindexEntireSource.sh  README.md  README.rst  REVIEWING.md  Untitled Diagram.xml  akzidenzgroteskbq_light-webfont.eot  akzidenzgroteskbq_medium-webfont.eot  assets-cli.toml  assets.toml  bootstrap.py  build.sh  buildMMS.sh  cloud.html  code-build.py  composer.json  conf-cloud-sitemap.xml  conf-onprem-sitemap.xml  conf-sitemap.xml  conf.py  (+58 more)
.claude/: git-best-practices.json  settings.json
.copier/: README.md  config.yaml  config.yml
.cspell/: cspell.json  mongodb-terms.txt
.evergreen/: dailygreen.yml  evergreen.yml
.ext/: additional_directives.py  aggregation_domain.py  mongodb_docs.py  mongodb_docs_meta.py  mongodb_domain.py  mongodb_javascript.py  optional.py
.github/: .backportrc.json  CODEOWNERS  README.md  backport-config.yml  copilot-instructions.md  eol-detection.yml  labeler.yml  pull-request-template.md  pull_request_template.md
.husky/: pre-commit  pre-push
.openpackage/: openpackage.index.yml  openpackage.yml
.tx/: config
.yardoc/: checksums  object_types
ai-integrations/: README.md  haystack.ipynb  langchain-graphrag.ipynb  langchain-hybrid-search.ipynb  langchain-local-rag.ipynb  langchain-memory-semantic-cache.ipynb  langchain-natural-language.ipynb  langchain-parent-document-retrieval.ipynb  langchain-self-query-retrieval.ipynb  langchain.ipynb  langgraph.ipynb  llamaindex.ipynb  semantic-kernel.ipynb
archive/: README.rst  meta.build-system.rst
aspiration/: contents.rst  index.txt  mongo.rst  reference  sharding.txt  use-cases.txt
backups/: charts-DOCSP-4581.json  charts-v0.11.json  compass-beta.json  compass-master.json
changelogs/: changelog_conf.yaml  generatechangelogs.py  requirements-changelogs.txt
code-example-tests/: CLAUDE.md  README.md  comparison-spec.md  package.json  preflight.js  processFiles.js  run-all-tests.js  sample-data-utility-spec.md  validate-snippets.js
composer/: composer.json
config/: build_conf.yaml  changelog_conf.yaml  delegated.yaml  errors.yaml  htaccess-mongoid.yaml  htaccess-next.yaml  htaccess-operators.yaml  htaccess.yaml  jira.yaml  (+46 more)
content/drivers/source/includes/rust-frameworks/actix/: Cargo.toml  db.rs  main.rs  models.rs  pages.rs
content/drivers/source/includes/rust-frameworks/actix/services/: mod.rs  restaurant_queries.rs
content/drivers/source/includes/rust-frameworks/rocket/: Cargo.toml  api.rs  index.hbs  main.rs  models.rs  repository.rs  style.css
content/drivers/source/includes/rust-frameworks/rocket/api/: restaurant_api.rs
content/drivers/source/includes/rust-frameworks/rocket/models/: restaurant.rs
content/drivers/source/includes/rust-frameworks/rocket/repository/: mongodb_repo.rs
content/realm/examples/cpp/asymmetric/: CMakeLists.txt  asymmetric-sync.cpp
content/realm/examples/cpp/local/: CMakeLists.txt  close-realm.cpp  compact.cpp  crud.cpp  filter-data.cpp  logger.cpp  notifications.cpp  realm-files.cpp  relationships.cpp  supported-types.cpp  threading.cpp
content/realm/examples/cpp/sync/: CMakeLists.txt  app.cpp  authentication.cpp  call-function.cpp  client-reset.cpp  custom-user-data.cpp  flexible-sync.cpp  quick-start.cpp  sync-errors.cpp  sync-session.cpp
(+102432 files in other folders)
