[package]
name = "rocket-quickstart"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = {version = "0.5.0", features = ["json"]}
serde = "1.0.136"
dotenv = "0.15.0"
tokio = {version = "1.32.0", features = ["full"]}
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }

[dependencies.mongodb]
version = "3.4.1" 